# dds-sdk_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  admin_import_user.cc  lib.cc  lib.h  main.cc  main.cpp  readme.md  sample_client.cc  sample_client.h  sample_server.cc
examples/: admin_import_user.cc  admin_import_users_and_exchange_guest_jwts.cc  auto_confirm.cc  get_next_greeting_message.cc  request_core_info.cc  user_confirm_task.cc  user_greetings_to_multiple_user.cc  user_import_guest_jwt.cc  user_refresh_token.cc  user_run_local_task.cc  user_run_task.cc
examples/sdk-a/: admin_import_user.cc  admin_import_users_and_exchange_guest_jwts.cc  auto_confirm.cc  get_next_greeting_message.cc  request_core_info.cc  user_confirm_task.cc  user_greetings_to_multiple_user.cc  user_import_guest_jwt.cc  user_refresh_token.cc  user_run_local_task.cc  user_run_task.cc
examples/sdk-p/: protocol_greetings.cc
proto/: colink.proto  dds.proto
proto/.github/workflows/: website_doc_update.yml
src/: colink_sdk.cc  colink_sdk.h  colink_sdk_a.cc  colink_sdk_a.h  colink_sdk_p.cc  colink_sdk_p.h  lib.cc  lib.h
